--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^1.7.8"
+  },
+  "dependencies": {
+    "jquery": "^3.2.1"
   }
 }
