--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
   "name": "floor",
   "version": "0.1.0",
-  "description": "Some interface for interactive floor",
-  "main": "main.js",
+  "description": "Simple web node.js starter kit",
+  "main": "index.js",
   "scripts": {
-    "start": "electron ."
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": "",
-  "keywords": [
-    "Electron",
-    "demo"
-  ],
-  "author": "GitHub",
-  "license": "CC0-1.0",
-  "devDependencies": {
-    "electron": "^1.7.8"
-  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "jquery": "^3.2.1"
-  }
+    "async": "^2.6.1",
+    "cheerio": "^1.0.0-rc.2",
+    "dotenv": "^5.0.1",
+    "express": "^4.16.2",
+    "fs": "0.0.1-security",
+    "google-spreadsheet": "^2.0.5",
+    "http": "0.0.0",
+    "mongodb": "^3.1.1",
+    "path": "^0.12.7",
+    "readline": "^1.3.0",
+    "socket.io": "^2.0.4"
+  },
+  "devDependencies": {}
 }
