--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "google-spreadsheet": "^2.0.5",
     "http": "0.0.0",
     "mongodb": "^3.1.1",
+    "net": "^1.0.2",
     "path": "^0.12.7",
     "readline": "^1.3.0",
     "socket.io": "^2.0.4"
