--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "async": "^2.6.1",
     "cheerio": "^1.0.0-rc.2",
+    "data-store": "^3.1.0",
     "dotenv": "^5.0.1",
     "express": "^4.16.2",
     "fs": "0.0.1-security",
