--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "http": "0.0.0",
     "mongodb": "^3.1.1",
     "net": "^1.0.2",
+    "onoff": "^3.2.2",
     "path": "^0.12.7",
     "readline": "^1.3.0",
     "socket.io": "^2.1.1"
